--- a/app/assets/stylesheets/partials/_map.sass
+++ b/app/assets/stylesheets/partials/_map.sass
@@ -1,8 +1,3 @@
-#outer-container
-   height: 820px
-   width: 1100px
-   margin: 100px auto
-
 #map-container
    height: 400px
    width: 850px
